# saft-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  README.pt.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/plans/: 2026-02-24-mvp-implementation.md  2026-02-25-advanced-tools-design.md  2026-02-25-query-tools-design.md
src/saft_mcp/: __init__.py  __main__.py  config.py  exceptions.py  server.py  state.py
src/saft_mcp/parser/: detector.py  encoding.py  full_parser.py  models.py
src/saft_mcp/tools/: aging.py  anomaly_detect.py  compare.py  export.py  get_invoice.py  load.py  query_customers.py  query_invoices.py  query_products.py  stats.py  summary.py  tax_summary.py  validate.py
src/saft_mcp/validators/: business_rules.py  hash_chain.py  nif.py  xsd_validator.py
tests/: conftest.py  test_integration.py
tests/test_parser/: test_full_parser.py
tests/test_tools/: test_aging.py  test_anomaly_detect.py  test_compare.py  test_export.py  test_get_invoice.py  test_load.py  test_query_customers.py  test_query_invoices.py  test_query_products.py  test_stats.py  test_summary.py  test_tax_summary.py  test_validate.py
tests/test_validators/: test_business_rules.py  test_hash_chain.py  test_nif.py
