[project]
name = "saft-mcp"
version = "0.1.0"
description = "MCP server for parsing and analyzing Portuguese SAF-T XML files"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "bybloom.ai", email = "hello@bybloom.ai" },
]
readme = "README.md"
keywords = ["mcp", "saft", "saft-pt", "tax", "portugal", "invoices", "audit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
    "mcp>=1.0",
    "lxml>=5.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "chardet>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "lxml-stubs",
]

[project.urls]
Homepage = "https://github.com/bybloom-ai/saft-mcp"
Repository = "https://github.com/bybloom-ai/saft-mcp"
Issues = "https://github.com/bybloom-ai/saft-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/saft_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
